--- a/templates/article_template_ir.html
+++ b/templates/article_template_ir.html
@@ -37,7 +37,7 @@
 
     <article>
       <figure class="img">
-        <img src="images/{{HERO_FILENAME}}" alt="{{HERO_ALT}}">
+        <img src="/images/{{HERO_FILENAME}}" alt="{{HERO_ALT}}">
       </figure>
 
       {{LEAD_HTML}}
